# getfeature_model

./: CMakeLists.txt  README.md  main.cpp  train_list.txt
feature/: 1_record425349323_22823713.mp3.wav.txt  1_record425702358_22651761.mp3.wav.txt  1_record425702358_27246582.mp3.wav.txt  1_record425801809_30561920.mp3.wav.txt  1_record425854444_21635680.mp3.wav.txt  1_record425865506_12155070.mp3.wav.txt  1_record425890106_26755626.mp3.wav.txt  1_record426045621_30266472.mp3.wav.txt  1_record426127223_30892392.mp3.wav.txt  1_record426190697_26740144.mp3.wav.txt  1_record426252138_28957356.mp3.wav.txt  1_record426252138_30143524.mp3.wav.txt  1_record426284687_26277679.mp3.wav.txt  1_record426305452_15999516.mp3.wav.txt  1_record426360659_21084438.mp3.wav.txt  1_record426363163_12503990.mp3.wav.txt  1_record426363163_22968474.mp3.wav.txt  1_record426363163_27114637.mp3.wav.txt  1_record426381216_21374285.mp3.wav.txt  1_record426567921_21129196.mp3.wav.txt  1_record426567921_21551426.mp3.wav.txt  1_record426600912_22116421.mp3.wav.txt  1_record426600912_27674006.mp3.wav.txt  1_record426600912_30853575.mp3.wav.txt  1_record426653006_25232828.mp3.wav.txt  1_record426653006_28428832.mp3.wav.txt  1_record426660657_22465918.mp3.wav.txt  1_record426660657_25811000.mp3.wav.txt  1_record426660657_25937901.mp3.wav.txt  1_record426660657_27139587.mp3.wav.txt  1_record426660657_28224186.mp3.wav.txt  1_record426775630_28189107.mp3.wav.txt  1_record426822431_25376921.mp3.wav.txt  1_record426938055_26628764.mp3.wav.txt  1_record426938055_26917270.mp3.wav.txt  (+6454 more)
libmfcc/: CMakeLists.txt  (+1 more)
(+1 files in other folders)
